--- a/demo/components/header/header.module.css
+++ b/demo/components/header/header.module.css
@@ -4,7 +4,7 @@
   flex-flow: row nowrap;
   align-items: center;
   background-color: #000;
-  padding-left: 16px;
+  padding-inline: 16px;
 }
 
 .rainbow {
@@ -32,4 +32,8 @@
   margin-left: 8px;
   color: #999;
   font-weight: normal;
+}
+
+.divider {
+  flex: 1;
 }
